# Changelog
# $Id$

nn-nn-12 - Version 5.1.20
  - Fix for Bug#13958793, ClassCastException in ConnectionImpl.buildCollationMapping() with 4.1 server.

  - Fix for Bug#36478, Client prepared statement bugged if word 'limit' included in the query.


04-02-12 - Version 5.1.19
  - Fix for Bug#64621, setMaxRows was not correctly processed during CS PS metadata
    collection causing entire resultset to be fetched and possibly leading to OOM.

  - Fix for Bug#63456, MetaData precision is different when using UTF8 or Latin1 tables.
	The problem was in finding maxBytesPerChar through versioned mapping from Java charset to MySQL charset.
	That map returns "utf8mb4" instead "utf8" for server versions starting with 5.5.2.
	CharsetMapping, ConnectionImpl and Field have been reorganized to use static maps INDEX_TO_MYSQL_CHARSET,
	STATIC_CHARSET_TO_NUM_BYTES_MAP instead. Also dynamic maps ConnectionImpl.indexToCustomMysqlCharset
	and ConnectionImpl.mysqlCharsetToCustomMblen have been added for custom charsets.

  - Added support for pluggable authentication via the com.mysql.jdbc.AuthenticationPlugin
    interface (which extends standard "extension" interface). Examples are in
    com/mysql/jdbc/authentication and in testsuite.regression.ConnectionRegressionTest.
    This introduces three new properties:

       authenticationPlugins defines comma-delimited list of classes that implement
       com.mysql.jdbc.AuthenticationPlugin and which will be used for authentication
       unless disabled by "disabledAuthenticationPlugins" property.

       disabledAuthenticationPlugins defines comma-delimited list of classes implementing
       com.mysql.jdbc.AuthenticationPlugin or mechanisms, i.e. "mysql_native_password".
       The authentication plugins or mechanisms listed will not be used for authentication
       which will fail if it requires one of them. It is an error to disable the default